# bbgrad

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: rnn.rs  tensor_addition.rs  tensor_broadcast_to.rs
src/: lib.rs  main.rs  ops.rs  tensor.rs
src/autograd/: backward.rs  forward.rs  mod.rs  nn.rs  ops.rs  ops_impl.rs  scalar_ops_macro.rs  tensor.rs  tensor_builder.rs
src/py/: mod.rs
src/tensor/: ops.rs  tensor.rs
training_data/: sample.txt
