[package]
name = "deep-learning-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "bbgrad"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.17.2", features = ["blas", "std"] }
ndarray-rand = "0.16.0"
blas-src = { version = "0.14.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
num-traits = "0.2.19"
